Working on stylesheets

--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -14,10 +14,10 @@
     flex-direction: column;
 }
 
-.review-form h1 {
+// .review-form h1 {
 
-}
+// }
 
-.rating-contents {
+// .rating-contents {
     
-}
+// }
