--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fullstack</title>
+    <title>scoop</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= javascript_include_tag
-    "https://maps.googleapis.com/maps/api/js?key=AIzaSyAPjYkDq0-iiCd6W5-qCw46J-r0EW39L1U"
-    %> <%= stylesheet_link_tag 'application', media: 'all' %> <%= csrf_meta_tags
-    %> <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAPjYkDq0-iiCd6W5-qCw46J-r0EW39L1U"%> 
+    <%= stylesheet_link_tag 'application', media: 'all' %> 
+    <%= csrf_meta_tags%> 
+    <%= javascript_include_tag 'application' %>
 
-    <--%= stylesheet_link_tag    'application', media: 'all' %>
-    <--%= javascript_include_tag 'application' %>
   </head>
 
   <body>
