Updated logging out

--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -54,3 +54,7 @@
 .session-form h1 {
     text-transform: uppercase;
 }
+
+// .home {
+//     background-image: url("https://cdn4.vectorstock.com/i/1000x1000/67/43/set-of-cartoon-ice-cream-icons-ice-cream-scoops-vector-11356743.jpg");
+// }
