Working on logout dropdown

--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -57,7 +57,65 @@
     text-decoration: none;
 }
 
-//session styling
+//LOGOUT DROPDOWN////////////////////////////
+/* The dropdown container */
+.logout-dropdown {
+    // display: flex;
+    float: left;
+    overflow: hidden;
+}
+
+/* Dropdown button */
+.logout-dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    // padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+    text-transform: uppercase;
+}
+
+
+/* Add a red background color to navbar links on hover */
+.logout-dropdown:hover .dropbtn {
+    background-color: white;
+    color: black;
+}
+
+/* Dropdown content (hidden by default) */
+.logout-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.logout-dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.logout-dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.logout-dropdown:hover .logout-dropdown-content {
+  display: block;
+}
+
+//SESSION STYLING
 .session-form-header {
     display: flex;
     width: 100%;
