--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -16,14 +16,14 @@
 // }
 
 .find-text {
-    padding: 20px;
+    padding: 10px;
     border-radius: 5px 0px 0px 5px;
     font-weight: bold;
     color: gray;
 }
 
 .near-text {
-    padding: 20px;
+    padding: 10px;
     border-left: solid 1px grey;
     font-weight: bold;
     color: gray;
@@ -55,4 +55,46 @@
     cursor: pointer;
     border-radius: 0px 5px 5px 0px;
     font-weight: bold;
+}
+
+.search-shortcuts {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    text-shadow: 1px 1px 0 0 black;
+    padding-bottom: 150px;
+}
+
+.search-shortcuts a:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+// .favorites {
+//     display: flex;
+//     justify-content: center;
+// }
+
+.favorites-header h2 {
+    display: flex;
+    justify-content: center;
+    color: rgb(201, 29, 29);
+    padding-top: 20px;
+    // border-top: solid 1px gray;
+}
+
+.favorites-list {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.favorites-list a {
+    text-decoration: none;
+}
+
+.favorites-birite .favorites-saltstraw .favorites-fentons {
+    display: flex;
+    flex-direction: column;
+    border: solid 1px gray;
+    border-radius: 5px;
 }
