Update home page styling

--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -92,6 +92,10 @@
     text-decoration: none;
 }
 
+.favorites-list a:hover {
+    text-decoration: underline;
+}
+
 .favorites-birite .favorites-saltstraw .favorites-fentons {
     display: flex;
     flex-direction: column;
