--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -4,6 +4,7 @@
     width: 100%;
     justify-content: center;
     background-color: rgb(201, 29, 29);
+    // background-color: #db0e0e;
 }
 
 .session-form-header h3 {
@@ -15,10 +16,92 @@
     text-decoration: none;
 }
 
+// .session-info {
+//     // display: flex;
+//     // justify-content: center;
+// }
+
 .formtype-header {
     text-transform: capitalize;
 }
 
-// .to-scoop {
+.session-intro a {
+    color: royalblue;
+}
+
+.session-intro a:hover {
+    text-decoration: underline;
+}
+
+// .demo-login {
 
 // }
+
+// .demo-text {
+
+// }
+
+.demo-button {
+    // background-color: #008CBA;
+    // background-color: rgb(36, 36, 170);
+    background-color: #3b5998;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    width: 280px;
+}
+
+.demo-button:hover {
+    cursor: pointer;
+    transition: 1.0s;
+}
+
+.session-info {
+    padding-bottom: 25px;
+}
+
+.or-divider {
+    text-align: center;
+    border: none;
+    border-top: solid 1px gray;
+    width: 250px;
+}
+
+.or-divider legend {
+    color: gray;
+    padding: 0 15px;
+    font-size: 15px;
+}
+
+.session-inputs {
+    // border-radius: 5px;
+}
+
+.session-email .session-password {
+    // border-radius: 5px;
+}
+
+.session-button {
+    background-color: rgb(201, 29, 29);
+    // background-color: #db0e0e;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    width: 280px;
+    text-transform: capitalize;
+}
+
+.session-button:hover {
+    cursor: pointer;
+    transition: 1.0s;
+}
