--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -57,7 +57,8 @@
 }
 
 .signup:hover {
-    color: black;
+    // color: black;
+    color: gray;
     background-color: white;
     transition: 0.5s;
 }
