--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -33,7 +33,8 @@
 
 .find-container {
     background-color: white;
-    color: lightgray;
+    // color: lightgray;
+    color: black;
     padding: 15px;
     font-size: 15px;
     width: 300px;
@@ -43,7 +44,8 @@
 
 .near-container {
     background-color: white;
-    color: lightgray;
+    // color: lightgray;
+    color: black;
     padding: 15px;
     font-size: 15px;
     width: 250px;
