--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -3,6 +3,7 @@
     // justify-content: flex-start;
     justify-content: center;
     // list-style-position: inside;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .business-map {
@@ -13,6 +14,7 @@
     display: flex;
     // float: right;
     justify-content: flex-end;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 // .business-info {
