--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -31,6 +31,7 @@
     text-shadow: stroke(5, white);
     font-weight: bold;
     // font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 // .navbar-signup-login {
@@ -43,6 +44,7 @@
     text-decoration: none;
     // margin: 5px;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar-signup {
