--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -43,6 +43,7 @@
     text-decoration: none;
     // margin: 5px;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .signup {
@@ -86,6 +87,7 @@
     text-decoration: none;
     margin: 5px;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .github-link a:hover {
@@ -109,6 +111,7 @@
     text-shadow: stroke(5, white);
     font-weight: bold;
     font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 //LOGOUT DROPDOWN////////////////////////////
@@ -130,6 +133,7 @@
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
     text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -157,6 +161,7 @@
   text-decoration: none;
   display: block;
   text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Add a grey background color to dropdown links on hover */
