--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -21,6 +21,7 @@
     font-weight: bold;
     color: gray;
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .near-text {
@@ -29,6 +30,7 @@
     font-weight: bold;
     color: gray;
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .find-container {
@@ -59,6 +61,8 @@
     cursor: pointer;
     border-radius: 0px 5px 5px 0px;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .search-shortcuts {
@@ -67,6 +71,7 @@
     margin-top: 20px;
     text-shadow: 1px 1px 0 0 black;
     padding-bottom: 150px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .search-shortcuts a:hover {
@@ -85,6 +90,7 @@
     color: rgb(201, 29, 29);
     padding-top: 20px;
     // border-top: solid 1px gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .favorites-list {
@@ -95,6 +101,7 @@
 .favorites-list a {
     text-decoration: none;
     color: royalblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .favorites-list a:hover {
@@ -117,6 +124,7 @@
 .to-all-businesses a {
     text-decoration: none;
     color: royalblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .to-all-businesses a:hover {
