--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -6,6 +6,16 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.business-show-intro {
+    display: flex;
+    justify-content: space-between;
+}
+
+.business-show-title {
+    display: inline;
+    
+}
+
 .business-map {
     display: flex;
 }
