Updating maps and added google api key

--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -46,10 +46,19 @@
 .business-item-contact-info {
     display: flex;
 }
+////////////////////////////////////// MAP /////////////@
 
-// .business-map {
+// .business-index-map {
 //     position: sticky;
+//     height: 500px;
+//     width: 500px;
 // }
+
+#business-map {
+    position: sticky;
+    height: 350px;
+    width: 350px;
+}
 
 
 ////////////////////////////business index item/////////////////////////////////
