Updating application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyC11LJOaWk3xQ1hQqQFus9VuLWu9gf1LGw"%> 
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key="%> 
     <%= stylesheet_link_tag 'application', media: 'all' %> 
     <%= csrf_meta_tags%> 
     <%= javascript_include_tag 'application' %>
