--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -7,6 +7,14 @@
     // background-color: #db0e0e;
 }
 
+// .session-form-header span {
+//     color: white;
+//     padding: 10px;
+//     font-weight: bold;
+//     font-family: Arial, Helvetica, sans-serif;
+//     font-size: 20px;
+// }
+
 .session-form-header h3 {
     font-size: 22px;
     color: white;
