--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -24,13 +24,19 @@
     display: flex;
     width: 100%;
     // height: 10px;
-    padding: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     background-color: rgb(201, 29, 29);
     // background-color: #db0e0e;
     justify-content: space-between;
     // justify-content: center;
     flex-direction: row;
+    // margin-left: 20px;
 }
+
+// .session-navbar-contents {
+//     padding-left: 20px;
+// }
 
 // .signup-login {
 //     padding-right: 250px;
@@ -49,7 +55,7 @@
 .signup {
     border: 2px solid white;
     border-radius: 4px 4px 4px 4px;
-    margin-right: 250px;
+    margin-right: 240px;
 }
 
 .login {
@@ -76,7 +82,7 @@
 }
 
 .github-link {
-    margin-left: 200px;
+    margin-left: 240px;
     // padding-right: 200px;
     // padding-left: 200px;
 }
