--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -6,11 +6,12 @@
     display: flex;
     width: 100%;
     // height: 10px;
-    padding: 12.5px;
+    padding-top: 12.5px;
+    padding-bottom: 12.5px;
     background-color: rgb(201, 29, 29);
     // background-color: #db0e0e;
-    justify-content: center;
-    // justify-content: space-between;
+    // justify-content: center;
+    justify-content: space-between;
     // justify-content: space-around;
     // justify-content: space-evenly;
     flex-direction: row;
@@ -44,14 +45,14 @@
 
 ///////////////////////////////////////////////////////////////////////////////
 
-.search-bar {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    flex-direction: row;
-    border: none;
-    // border-radius: 5px 5px 5px 5px;
-}
+// .nav-search-bar {
+//     display: flex;
+//     // justify-content: center;
+//     width: 100%;
+//     flex-direction: row;
+//     border: none;
+//     // border-radius: 5px 5px 5px 5px;
+// }
 
 .nav-find-text {
     padding: 11px;
@@ -160,3 +161,54 @@
 //     background-color: white;
 //     transition: 0.5s;
 // }
+
+.sub-navbar {
+    display: flex;
+    width: 100%;
+    // justify-content: flex-end;
+    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(238, 237, 237);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    // padding-left: 100px;
+    // padding-right: 100px;
+}
+
+.sub-navbar a:hover {
+    color: royalblue;
+}
+
+.sub-navbar-right {
+    padding-right: 140px;
+}
+
+.sub-navbar-right a {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sub-navbar-left {
+    padding-left: 140px;
+    // justify-content: space-evenly;
+}
+
+.sub-navbar-left a {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sub-navbar a {
+    // padding-left: 100px;
+    // padding-right: 100px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    border-left: solid 1px gray;
+    border-right: solid 1px gray;
+}
