--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -1,7 +1,21 @@
-.review-form-header {
+// .review-form-header {
+//     display: flex;
+//     justify-content: center;
+//     width: 100%;
+// }
+
+.review-navbar {
     display: flex;
-    justify-content: center;
     width: 100%;
+    // height: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: rgb(201, 29, 29);
+    // background-color: #db0e0e;
+    justify-content: space-between;
+    // justify-content: center;
+    flex-direction: row;
+    // margin-left: 20px;
 }
 
 .review-form-nav {
@@ -15,11 +29,29 @@
     // border: solid 1px gray;
 }
 
+.review-form-contents {
+    padding-left: 110px;
+    padding-right: 110px;
+}
+
 .review-form-inputs {
     border: solid 1px lightgray;  
     margin-left: 30px;  
+    margin-right: 30px;  
     padding: 20px;
     width: 500px;
+}
+
+.review-input-textarea {
+    border: none;
+    resize: none;
+    outline: none;
+    overflow: auto;
+    font-size: 15px;
+}
+
+.nav-logo {
+    margin-left: 130px;
 }
 
 .nav-logo span {
@@ -30,6 +62,10 @@
     font-size: 20px;
 }
 
+.navbar-signup {
+    margin-right: 130px;
+}
+
 // .review-form h1 {
 
 // }
@@ -37,3 +73,40 @@
 // .rating-contents {
     
 // }
+
+.review-form-button {
+    background-color: rgb(201, 29, 29);
+    // background-color: #db0e0e;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    width: 240px;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.review-form-button:hover {
+    cursor: pointer;
+    transition: 1.0s;
+}
+
+.review-form-cancel {
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 30;
+    border-radius: 4px;
+    width: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.review-form-cancel:hover {
+    cursor: pointer;
+}
