--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -137,14 +137,21 @@
 }
 
 .review-index-list {
-    display: flex;
+    // display: flex;
+    display: inline;
     flex: 1 1 auto;
     float: left;
     width: 500px;
+    margin-right: 30px;
 }
 
 .review-index-header {
     display: flex;
+    // display: inline;
+    flex: 1 1 auto;
+    width: 100%;
+    border-bottom: solid 1px lightgray;
+    padding-bottom: 20px;
 }
 
 .review-index-header > span {
@@ -184,12 +191,41 @@
     color: rgb(201, 29, 29);
 }
 
-// .right-column-info  > span {
-//     font-size: 10px;
-// }
 
 .business-answers {
     font-weight: bold;
+}
+
+.below-review-header {
+    display: flex;
+    // display: inline;
+    // width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: solid 1px lightgray;   
+}
+
+.business-review-start-review a {
+    display: flex;
+    justify-content: flex-end;
+    width: 275px;
+    margin: 20px 30px 20px 250px;
+    text-decoration: none;   
+    color: royalblue;
+    padding: 20px 50px;
+    border: solid 1px lightgray;
+    background-color: lightgray;
+}
+
+.business-review-start-review {
+    border-bottom: solid 1px lightgray;
+}
+
+.business-show-review-container {
+    display: flex;
+    // display: inline;
+    flex: 1 1 auto;
+    // flex-flow: row wrap;
 }
 
 // .sub-navbar {
