Update business index styling

--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -11,6 +11,7 @@
     padding-right: 100px;
     // width: 900px;
     // flex-direction: row;
+    // border-bottom: solid 1px gray;
 }
 
 .business-list {
