--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -16,7 +16,7 @@
 // }
 
 .find-text {
-    padding: 15px;
+    padding: 16px 15px 15px 15px;
     border-radius: 5px 0px 0px 5px;
     font-weight: bold;
     color: gray;
@@ -25,7 +25,7 @@
 }
 
 .near-text {
-    padding: 15px;
+    padding: 16px 15px 15px 15px;
     border-left: solid 1px grey;
     font-weight: bold;
     color: gray;
