--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -24,6 +24,11 @@
 .nav-logo {
     display: flex;
     font-size: 20px;
+    // text-shadow:
+	// 	-1.5px -1.5px 0 #fff,
+	// 	1.5px -1.5px 0 #fff,
+	// 	-1.5px 1.5px 0 #fff,
+	// 	1.5px 1.5px 0 #fff;
 }
 
 .nav-logo a {
@@ -37,6 +42,11 @@
     font-weight: bold;
     // font-size: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    text-shadow:
+		-1.5px -1.5px 0 #fff,
+		1.5px -1.5px 0 #fff,
+		-1.5px 1.5px 0 #fff,
+		1.5px 1.5px 0 #fff;
 }
 
 // .navbar-signup-login {
@@ -76,12 +86,12 @@
     background-color: white;
     // color: lightgray;
     color: black;
-    padding: 12px;
-    // font-size: 15px;
+    padding: 10px 11px 11px 11px;
+    font-size: 15px;
     width: 200px;
     border: none;
     outline: none;
-    height: 15px;
+    // height: 15px;
 }
 
 // .nav-search-find {
@@ -97,11 +107,12 @@
     // color: lightgray;
     color: black;
     // padding: 10px;
+    padding: 10px 11px 11px 11px;
     font-size: 15px;
     width: 150px;
     border: none;
     outline: none;
-    padding: 10.5px;
+    // padding: 10.5px;
 }
 
 .nav-search-button {
@@ -112,7 +123,7 @@
     border-radius: 0px 5px 5px 0px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 15px;
+    padding: 15px 15px 12px 15px;
     border: none;
 }
 
