--- a/app/assets/stylesheets/review_index.scss
+++ b/app/assets/stylesheets/review_index.scss
@@ -26,3 +26,19 @@
     display: inline;
     width: 540px;
 }   
+
+
+//////////////////// REVIEW-INDEX-ITEM ////////////////////
+
+.edit-review-link {
+    text-decoration: none;
+    color: royalblue;
+    font-size: 13px;
+    // border-top: solid 1px lightgray;
+    // padding-top: 10px;
+    // margin-top: 10px;
+}
+
+.edit-review-link:hover {
+    text-decoration: underline;
+}
