--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -27,6 +27,7 @@
     justify-content: flex-start;
     flex-direction: column;
     // border: solid 1px gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .review-form-contents {
