--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -197,15 +197,24 @@
     padding-top: 10px;
 }
 
+.business-hours > div {
+    padding-top: 5px;
+    font-size: 15px;
+}
+
+.business-hours {
+    padding-bottom: 20px;
+}
+
 .more-business-info-title {
     font-size: 15px;
     font-weight: bold;
     color: rgb(201, 29, 29);
 }
 
-
 .business-answers {
     font-weight: bold;
+    padding-left: 5px;
 }
 
 .below-review-header {
