--- a/app/assets/stylesheets/review_index.scss
+++ b/app/assets/stylesheets/review_index.scss
@@ -25,7 +25,11 @@
     // display: flex;
     display: inline;
     width: 540px;
-}   
+}
+
+.rating-and-date {
+    padding-bottom: 10px;
+}
 
 
 //////////////////// REVIEW-INDEX-ITEM ////////////////////
