--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -28,8 +28,8 @@
     padding-bottom: 25px;
     background-color: rgb(201, 29, 29);
     // background-color: #db0e0e;
-    justify-content: space-between;
-    // justify-content: center;
+    // justify-content: space-between;
+    justify-content: center;
     flex-direction: row;
     // margin-left: 20px;
 }
@@ -38,10 +38,11 @@
 //     padding-left: 20px;
 // }
 
-// .signup-login {
-//     padding-right: 250px;
-//     padding-left: 250px;
-// }
+.signup-login {
+    // // padding-right: 240px;
+    padding-left: 380px;
+    // padding-right: 150px;
+}
 
 .signup-login a {
     color: white;
@@ -50,12 +51,14 @@
     // margin: 5px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    // position: relative;
+    white-space: nowrap;
 }
 
 .signup {
     border: 2px solid white;
     border-radius: 4px 4px 4px 4px;
-    margin-right: 240px;
+    // margin-right: 240px;
 }
 
 .login {
@@ -77,14 +80,14 @@
     transition: 0.5s;
 }
 
-.logout-dropdown {
-    margin-right: 250px;
-}
+// .logout-dropdown {
+//     margin-right: 250px;
+// }
 
 .github-link {
-    margin-left: 240px;
-    // padding-right: 200px;
-    // padding-left: 200px;
+    // // padding-left: 240px;
+    padding-right: 380px;
+    // padding-left: 150px;
 }
 
 .github-link a {
@@ -165,6 +168,10 @@
 }
 
 /* Links inside the dropdown */
+.logout-dropdown {
+    padding-left: 400px;
+}
+
 .logout-dropdown-content a {
   float: none;
   color: black;
