--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -10,11 +10,12 @@
     padding-bottom: 12.5px;
     background-color: rgb(201, 29, 29);
     // background-color: #db0e0e;
-    // justify-content: center;
-    justify-content: space-between;
+    justify-content: center;
+    // justify-content: space-between;
     // justify-content: space-around;
     // justify-content: space-evenly;
     flex-direction: row;
+    white-space: nowrap;
 }
 
 // .nav-user {
@@ -88,7 +89,7 @@
     color: black;
     padding: 10px 11px 11px 11px;
     font-size: 15px;
-    width: 200px;
+    width: 280px;
     border: none;
     outline: none;
     // height: 15px;
@@ -109,7 +110,7 @@
     // padding: 10px;
     padding: 10px 11px 11px 11px;
     font-size: 15px;
-    width: 150px;
+    width: 230px;
     border: none;
     outline: none;
     // padding: 10.5px;
@@ -184,6 +185,7 @@
     padding-bottom: 10px;
     // padding-left: 100px;
     // padding-right: 100px;
+    white-space: nowrap;
 }
 
 .sub-navbar a:hover {
@@ -192,6 +194,7 @@
 
 .sub-navbar-right {
     padding-right: 140px;
+    padding-left: 250px;
 }
 
 .sub-navbar-right a {
