--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -183,7 +183,7 @@
 .right-column-info {
     display: inline;
     width: 50px;
-    height: 200px;
+    height: 100%;
     flex: 1 1 auto;
     justify-content: flex-end;
     float: right;
