--- a/app/assets/stylesheets/review_index.scss
+++ b/app/assets/stylesheets/review_index.scss
@@ -59,6 +59,11 @@
 
 .review-reaction-question {
     padding-bottom: 10px;
+    // display: flex;
+}
+
+.review-reaction-options {
+    display: flex;
 }
 
 .review-reaction-options > span {
@@ -66,4 +71,23 @@
     padding: 5px;
     margin-right: 10px;
     border-radius: 4px;
+}
+
+.review-reaction-options > div {
+    padding-right: 10px;
+    // background-color: white;
+}
+
+.reaction-buttons {
+    padding: 5px;
+    background-color: color;
+    color: gray;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.reaction-buttons:hover {
+    background-color: lightgray;
+    transition: 1s;
+    outline: none;
 }
