--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -60,7 +60,9 @@
     background-color: rgb(201, 29, 29);
     color: white;
     cursor: pointer;
+    border: none;
     border-radius: 0px 5px 5px 0px;
+
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     font-family: Arial, Helvetica, sans-serif;
@@ -79,6 +81,8 @@
     text-shadow: 1px 1px 0 0 black;
     padding-bottom: 150px;
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-weight: bold;
 }
 
 .search-shortcuts a:hover {
@@ -98,6 +102,10 @@
     padding-top: 20px;
     // border-top: solid 1px gray;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.favorites {
+    padding-top: 75px;
 }
 
 .favorites-list {
