Add splash favorites media

--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -130,6 +130,19 @@
     border-radius: 5px;
 }
 
+.saltstraw-splash {
+    // background-image: url("https://s3-media1.fl.yelpcdn.com/bphoto/ruDWjTwA0IlTkqypoT1g9w/ls.jpg")
+    // background-image: asset_url('background_1.jpeg');
+}
+
+.fentons-splash {
+
+}
+
+.birite-splash { 
+
+}
+
 .to-all-businesses {
     display: flex;
     justify-content: center;
