--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -49,7 +49,7 @@
 
 .signup-login {
     // // padding-right: 240px;
-    padding-left: 380px;
+    padding-left: 335px;
     // padding-right: 150px;
 }
 
@@ -93,13 +93,13 @@
 //     margin-right: 250px;
 // }
 
-.github-link {
+.github-linkedin-link {
     // // padding-left: 240px;
-    padding-right: 380px;
+    padding-right: 335px;
     // padding-left: 150px;
 }
 
-.github-link a {
+.github-linkedin-link a {
     color: white;
     padding: 10px;
     text-decoration: none;
@@ -108,7 +108,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.github-link a:hover {
+.github-linkedin-link a:hover {
     cursor: pointer;
     // text-decoration: underline;
     border-bottom: 2px solid white;
