Update navbar style

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,6 +8,7 @@
     // height: 10px;
     padding-top: 12.5px;
     padding-bottom: 12.5px;
+    padding-left: 8px;
     background-color: rgb(201, 29, 29);
     // background-color: #db0e0e;
     justify-content: center;
@@ -64,6 +65,10 @@
 //     border: none;
 //     // border-radius: 5px 5px 5px 5px;
 // }
+
+.nav-search-bar {
+    padding-top: 1px;
+}
 
 .nav-find-text {
     padding: 11px;
