--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,7 +8,8 @@
     // height: 10px;
     padding-top: 12.5px;
     padding-bottom: 12.5px;
-    padding-left: 8px;
+    // padding-left: 8px;
+    // margin-left: 8px;
     background-color: rgb(201, 29, 29);
     // background-color: #db0e0e;
     justify-content: center;
@@ -30,7 +31,8 @@
 	// 	-1.5px -1.5px 0 #fff,
 	// 	1.5px -1.5px 0 #fff,
 	// 	-1.5px 1.5px 0 #fff,
-	// 	1.5px 1.5px 0 #fff;
+    // 	1.5px 1.5px 0 #fff;
+    padding-left: 18px;
 }
 
 .nav-logo a {
