--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -92,9 +92,6 @@
     // opacity: 1;
 }
 
-.business-map {
-    display: flex;
-}
 
 .business-info-box {
     display: flex;
@@ -126,15 +123,23 @@
 }
 
 // .business-map {
-//     width: 100px;
-//     height: 100%;
-// }
+    //     width: 100px;
+    //     height: 100%;
+    // }
 
+// .business-map {
+//     display: flex;
+// }
+    
 .business-map-box {
     display: flex;
+    // width: 100%;
+    // height: 50%;
     width: 280px;
     height: 100px;
 }
+
+// .business-map-box
 
 .business-address {
     font-weight: bold;
