Update business index style

--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -31,6 +31,10 @@
     padding: 17px;
 }
 
+.business-index-item:hover {
+    
+}
+
 // .business-item-link li {
 //     list-style-position: inside;
 // }
