--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -182,3 +182,10 @@
     // flex-wrap: wrap;
     word-wrap: break-word;
 }
+
+.business-index-navbar {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
