--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -80,7 +80,10 @@
 }
 
 .business-index-map {
-    position: sticky;
+    // position: sticky;
+    // position: -webkit-sticky; /* Safari */
+    // position: sticky;
+    // // top: 0;
     padding-top: 16px;
     padding-left: 20px;
 }
